<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ui.parameters.ParameterDetailsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/header_text_size"
        android:text="@string/parameter_details"
        android:fontFamily="@font/rubik_medium"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/paramName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameter_name"
        android:fontFamily="@font/rubik"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/createdAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameter_created_at"
        android:fontFamily="@font/rubik"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/minValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameter_min_value"
        android:fontFamily="@font/rubik"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/maxValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameter_max_value"
        android:fontFamily="@font/rubik"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/paramEdit"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/parameter_edit_button_text"
        android:textSize="@dimen/subheader_text_size"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="130dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        />

    <Button
        android:id="@+id/paramDelete"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/parameter_delete_button_text"
        android:textSize="@dimen/subheader_text_size"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="130dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        />
</LinearLayout>