<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ui.properties.PropertyManageActivity">

    <TextView
        android:id="@+id/propHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_size"
        android:gravity="center"
        android:text="@string/property_add_new"
        android:fontFamily="@font/rubik_medium"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/gray"/>

    <EditText
        android:id="@+id/newPropName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/property_name"
        android:autofillHints="@string/property_name"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/rubik"
        android:paddingLeft="@dimen/edit_text_margin"/>

    <ListView
        android:id="@+id/property_manage_modifiers_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_list_height"/>

    <Button
        android:id="@+id/add_modifier_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/add_modifier"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/property_manage_constraints_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_list_height"/>

    <Button
        android:id="@+id/add_constraint_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/add_constraint"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/confirmAddPropertyButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/parameter_confirm"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>